--- a/package.json
+++ b/package.json
@@ -1,21 +1,13 @@
 {
-  "name": "warmup",
+  "name": "warmup-test",
   "version": "1.0.0",
-  "description": "Let's warm up!",
+  "description": "Warm up tests",
   "main": "test.js",
   "scripts": {
     "test": "mocha test.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/yankouskia/warmup.git"
-  },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/yankouskia/warmup/issues"
-  },
-  "homepage": "https://github.com/yankouskia/warmup#readme",
   "devDependencies": {
     "mocha": "^5.0.1"
   }
