--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Warm up tests",
   "main": "test.js",
   "scripts": {
-    "test": "mocha test.js"
+    "test": "mocha test.js",
+    "mocha-jenkins-reporter": "0.4.1"
   },
   "author": "",
   "license": "ISC",
