--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Warm up tests",
   "main": "test.js",
   "scripts": {
-    "test": "mocha test.js",
-    "mocha-jenkins-reporter": "0.4.1"
+    "test": "JUNIT_REPORT_PATH=/report.xml mocha --colors --reporter mocha-jenkins-reporter"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "mocha": "^5.0.1"
+    "mocha": "^5.0.1",
+    "mocha-jenkins-reporter": "0.4.1"
   }
 }
