--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Warm up tests",
   "main": "test.js",
   "scripts": {
-    "test": "mocha test.js",
-    "test-jenkins": "JUNIT_REPORT_PATH=report.xml mocha --colors --reporter mocha-jenkins-reporter"
+    "test": "JUNIT_REPORT_PATH=report.xml mocha --colors --reporter mocha-jenkins-reporter"
   },
   "author": "",
   "license": "ISC",
